docs: clarify description of syntax tables in Org mode
Updated the README and source file to clarify that syntax tables
are added to source blocks in Org mode according to their major
mode.

--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 * org-src-syntax-table
 
-Add syntax tables to org src blocks according to their major mode.
+Add syntax tables to source blocks in Org mode according to their major mode.
 
 ** Installation
 
